// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar Should display correctly with action item as: Button 1`] = `
<DocumentFragment>
  .emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

.emotion-7 {
  padding-left: 24px;
  display: none;
}

@media screen and (min-width:480px) {
  .emotion-7 {
    display: block;
  }
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0A68C1;
  border-radius: 8px;
  color: #FFFFFF;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-5:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-5:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-5:disabled {
  background-color: #e4e4e4;
  color: #9c9c9c;
}

.emotion-5:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-8"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-6"
      >
        <button
          class="emotion-5"
          data-testid="button"
          type="button"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-3"
            >
              <span
                class="emotion-2"
              >
                Default button
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar Should display correctly with action item as: Link 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

.emotion-5 {
  padding-left: 24px;
  display: none;
}

@media screen and (min-width:480px) {
  .emotion-5 {
    display: block;
  }
}

.emotion-4 {
  display: inline-block;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-4 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-4:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-4:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:visited:not(:disabled) {
  color: #903D91;
}

.emotion-4:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-4 {
    vertical-align: text-bottom;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

<div
    class="emotion-6"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
    <div
      class="emotion-5"
    >
      <a
        class="emotion-4"
        href="/"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-2"
          >
            Link
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as Heading1 tag 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 40px;
  line-height: 1.1;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 24px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h1
        class="emotion-0"
      >
        Test title of title bar
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as Heading2 tag 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as Heading3 tag 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 24px;
  line-height: 1.1666666666666667;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 12px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h3
        class="emotion-0"
      >
        Test title of title bar
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as Heading4 tag 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 8px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h4
        class="emotion-0"
      >
        Test title of title bar
      </h4>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as Heading5 tag 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.1111111111111112;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  font-size: 20px;
  line-height: 1.2;
  color: #0a0a0a;
  margin: 0 0 8px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h5
        class="emotion-0"
      >
        Test title of title bar
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as Heading6 tag 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  color: #0a0a0a;
  margin: 0 0 8px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h6
        class="emotion-0"
      >
        Test title of title bar
      </h6>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with align center 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with align left 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with border Bottom 1`] = `
<DocumentFragment>
  .emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: solid;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with border None 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with border Top 1`] = `
<DocumentFragment>
  .emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: solid;
  border-bottom-style: none;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with border TopAndBottom 1`] = `
<DocumentFragment>
  .emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: solid;
  border-bottom-style: solid;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with default styles and given title 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with padding left 1`] = `
<DocumentFragment>
  .emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with padding right 1`] = `
<DocumentFragment>
  .emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  font-family: "Noto Sans",sans-serif;
  color: #2e2e2e;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  margin: 0 0 16px 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  box-sizing: border-box;
  border-color: #f0f0f0;
  border-width: 1px;
  border-style: none;
  border-top-style: none;
  border-bottom-style: none;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;
